tests/baselines/reference/errorLocationForInterfaceExtension.errors.txt
==== tests/cases/compiler/errorLocationForInterfaceExtension.ts (1 errors) ====
    var n = '';
    
    interface x extends string { }
                        ~~~~~~
!!! errorLocationForInterfaceExtension.ts(3,21): error TS2075: An interface may only extend another class or interface.
    